--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,2 +1,14 @@
 @import "~@fortawesome/fontawesome-free/css/all.min.css";
 @import "~bootstrap/scss/bootstrap";
+
+body {
+    color: rgb(201, 201, 201);
+    background-color: rgb(39, 39, 39);
+}
+
+#mainContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 10%;
+}
